syntax = "proto3";

import public "google/protobuf/timestamp.proto";
option java_multiple_files = true;
package com.aosom.service.stock;

message StockLogRequest {
  int64 id=1;
  int64 uid=2;
  int64 orderid=3;
  int32 siteid=4;
  int32 from=5;
  int32 optype=6;
  string skustockinfo=7;
  int32 pageSize=8;
  int32 currentPage=9;

}

message StockLogResponse {
  bool isSuccess=1;
  string msg=2;
  StockLogRequest obj=3;
}

message StockLogEntity{
  int64 id=1;
  int64 uid=2;
  int64 orderid=3;
  int32 siteid=4;
  int32 from=5;
  int32 optype=6;
  string skustockinfo=7;
}


message StockLogPageResponse{
  bool isSuccess=1;
  string msg=2;
  int64 total=3;
  int32 currentPage=4;
  int32 pageSize=5;
  repeated StockLogEntity data=6;
}

service StockLogService {
  rpc get (StockLogRequest) returns (StockLogEntity);
  rpc findPage (StockLogRequest) returns (StockLogPageResponse);
}